# ros2_fprime_bridge

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
.devcontainer/: Dockerfile  build.sh  devcontainer.json
common/autogen/: README.md  compile.py  controller_defs.json  dynamics_defs.json  spring_defs.json
common/lulav_comm/: README.md
common/lulav_comm/pipe/: README.md
common/lulav_comm/pipe/src/: pipe_reader.cpp  pipe_rw.hpp  pipe_writer.cpp
common/lulav_comm/pipe/test/: main.cpp
common/lulav_comm/udp/: README.md
common/lulav_comm/udp/src/: udp_client.cpp  udp_client_server.hpp  udp_server.cpp
common/lulav_comm/udp/test/: main.cpp
examples/spring_mass_dumper/: CMakeLists.txt  README.md  io_structs.hpp  main.cpp
examples/spring_mass_dumper/include/: controller.hpp  dynamics.hpp  io_structs.hpp
examples/spring_mass_dumper/src/: controller.cpp  dynamics.cpp
fprime_ws/: README.md
fprime_ws/Ref/: CMakeLists.txt  settings.ini
fprime_ws/spring/: .gitignore  CMakeLists.txt  settings.ini
fprime_ws/spring/Top/: CMakeLists.txt  Main.cpp  instances.fpp  springTopologyDefs.cpp  springTopologyDefs.hpp  topology.fpp
fprime_ws/spring/controller/: CMakeLists.txt  controller.cpp  controller.fpp  controller.hpp  controller_comp.cpp  controller_comp.fpp  controller_comp.hpp
fprime_ws/spring/ros2_bridge/: CMakeLists.txt  ros2_bridge.cpp  ros2_bridge.fpp  ros2_bridge.hpp
fprime_ws/spring/spring_ports/: CMakeLists.txt  controller_ports.fpp
fprime_ws/spring/spring_types/: CMakeLists.txt  spring.fpp
ros_ws/: README.md
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/install/dynamics_node/lib/dynamics_node/: dynamics
ros_ws/install/dynamics_node/share/dynamics_node/: local_setup.dsv  local_setup.sh  package.bash  (+4 more)
ros_ws/log/: latest_build
ros_ws/src/dynamics_node/: CMakeLists.txt  package.xml
ros_ws/src/dynamics_node/config/: params.yaml
ros_ws/src/dynamics_node/msg/: ControlSignal.msg  State.msg
ros_ws/src/dynamics_node/src/: dynamics_node.cpp
ros_ws/src/ros2_udp_bridge/: CMakeLists.txt  package.xml
ros_ws/src/ros2_udp_bridge/include/ros2_udp_bridge/: bridge.hpp
ros_ws/src/ros2_udp_bridge/src/: bridge.cpp
ros_ws/src/scheduler/: package.xml  setup.cfg  setup.py
ros_ws/src/scheduler/launch/: dynamics.launch.py  simulator.launch.py
ros_ws/src/scheduler/scheduler/: scheduler.py
simulink/: Controller.slx  Dynamics.slx  config.m  config.mat  simulation.slx
simulink/code_generation/Controller/: Controller.slxc
simulink/code_generation/Controller/Controller_grt_rtw/: Controller.cpp  Controller.h  Controller.mk  Controller_capi.cpp  Controller_capi.h  Controller_capi_host.h  Controller_data.cpp  Controller_manifest.txt  Controller_private.h  Controller_types.h  buildInfo.mat  builtin_typeid_types.h  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
simulink/code_generation/Dynamics/: Dynamics.slxc
simulink/code_generation/Dynamics/Dynamics_grt_rtw/: Dynamics.cpp  Dynamics.h  Dynamics.mk  Dynamics_capi.cpp  Dynamics_capi.h  Dynamics_capi_host.h  Dynamics_data.cpp  Dynamics_manifest.txt  Dynamics_private.h  Dynamics_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  multiword_types.h  rtmodel.h  rtw_proj.tmw  rtwtypeschksum.mat
(+119 files in other folders)
